MDEV-16240: Assertion `0' failed in row_sel_convert_mysql_key_to_innobase

Set table in row ID position mode before using this function.