sql/item_subselect.h
@@ -1287,7 +1287,7 @@ public:
     ++cur_key_idx;
   }
 
-  void sort_keys();
+  bool sort_keys();
   double null_selectivity();
 
   /*
