sql/sql_update.cc
@@ -211,6 +211,10 @@ static void prepare_record_for_error_message(int error, TABLE *table)
   bitmap_union(table->read_set, &unique_map);
   /* Tell the engine about the new set. */
   table->file->column_bitmaps_signal();
+  /* Prepare table for random positioning (importent for innodb) */
+  if (table->file->ha_index_or_rnd_end() ||
+      table->file->ha_rnd_init(0))
+    DBUG_VOID_RETURN;
   /* Read record that is identified by table->file->ref. */
   (void) table->file->ha_rnd_pos(table->record[1], table->file->ref);
   /* Copy the newly read columns into the new record. */
